--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600&display=swap&subset=cyrillic-ext"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Tesla Project</title>
 </head>
 <body>
     <!-- Шапка сайта меню навигации-->
-    <header class="header">  
+    <header class="header">
             <img src="img/Logo.png" alt="tesla" class="header__logo">
             <nav class="header__menu">
                 <ul class="menu__item">
@@ -25,7 +28,7 @@
             </ul>
     </header>
     <!--Часть сайта с баннером-->
-    
+
     <section class="banner">
         <h1 class="banner__title">Model S</h1>
         <p class="bunner__subtitle">Добро пожаловать в будущее!</p>
@@ -62,7 +65,7 @@
             <aside class="future__sdb">
                 <h2 class="sdb__title">Будущее вождения</h2>
                 <p class="sdb__text">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
-                <div class="sdb__info"> 
+                <div class="sdb__info">
                     <div class="info__section">
                         <img src="img/icon/phone.png" alt="phone" class="info__img">
                         <h3 class="info__title">17 дюймов</h3>
@@ -83,7 +86,7 @@
                     <img src="img/icon/info.png" alt="?" class="form__img">
                     <p class="form__info">Узнать больше</p>
                     <button class="form__btn">Заказать</button>
-                </div> 
+                </div>
             </aside>
         </section>
         <section class="conteiner__raiting">
@@ -114,7 +117,7 @@
                             <img src="img/icon/Star.png" alt="*" class="list__star">
                             <img src="img/icon/Star.png" alt="*" class="list__star">
                             <img src="img/icon/Star.png" alt="*" class="list__star">
-                            <img src="img/icon/Star.png" alt="*" class="list__star">  
+                            <img src="img/icon/Star.png" alt="*" class="list__star">
                         <li class="raiting__list_item">Водитель</li>
                             <img src="img/icon/Star.png" alt="*" class="list__star">
                             <img src="img/icon/Star.png" alt="*" class="list__star">
