--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <!-- Шапка сайта меню навигации-->
-    <header class="header">
+    <div class="wrap__header">
+        <header class="header">
             <img src="img/Logo.png" alt="tesla" class="header__logo">
             <nav class="header__menu">
                 <ul class="menu__item">
@@ -26,7 +27,9 @@
                 <li class="reg__link"><a href="#">Магазин</a></li>
                 <li class="reg__link"><a href="#">Войти</a></li>
             </ul>
-    </header>
+            <img src="img/icon/menu.svg" alt="menu" class="header__reg_menu">
+        </header>
+    </div>
     <!--Часть сайта с баннером-->
 
     <section class="banner">
@@ -36,28 +39,45 @@
     </section>
     <!--Информация под баннером-->
     <section class="wrap">
-        <article class="wrap__char">
-            <div class="char__section">
-                <img src="img/icon/speed.png" alt="speed" class="char__img">
-                <p class="char__up">2,7 сек</p>
-                <span class="char__down">0-100 км/час</span>
+        <div class="wrap__char_item">
+            <div class="char">
+                    <div class="char__item">
+                        <img src="img/icon/speed.png" alt="speed">
+                    </div>
+                    <div class="char__item">
+                        <div class="charset__first">
+                            <span class="char__up_big">2,7</span>
+                            <span class="char__up_mini">сек</span>
+                        </div>
+                        <div class="charset__second">
+                            0-100 км/час
+                        </div>
+                    </div>
+                    <div class="char__item char__item_left">
+                        <img src="img/icon/stroke.png" alt="stroke">
+                    </div>
+                    <div class="char__item">
+                        <div class="charset__first">
+                            <span class="char__up_big">632</span>
+                            <span class="char__up_mini">км</span>
+                        </div>
+                        <div class="charset__second">
+                            запас хода
+                        </div>
+                    </div>
+                    <div class="char__button">
+                        <button class="char__btn_test">
+                            <img src="img/icon/test.png" alt="test" class="test__img">
+                            <span class="test__text">Тест драйв</span>
+                        </button>
+                        <button class="char__btn_red">Заказать</button>
+                    </div>
             </div>
-            <div class="char__section">
-                <img src="img/icon/stroke.png" alt="stroke" class="char__img">
-                <p class="char__up">632 км</p>
-                <span class="char__down">Запас хода</span>
-            </div>
-        </article>
-        <article class="wrap__test">
-            <div class="test__section">
-                <img src="img/icon/test.png" alt="test" class="test__img">
-                <p class="test__text">Тест драйв</p>
-            </div>
-            <div class="test__section">
-                <button class="test__btn">Заказать</button>
-            </div>
-        </article>
+        </div>
     </section>
+    <div class="arrow__down">
+        <img src="img/icon/down.svg" alt="">
+    </div>
     <!-- Основная информация страницы-->
     <main class="container__main">
         <section class="conteiner__future">
