--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <div class="char__item">
                     <div class="char__item_block">
                         <div  class="char__img">
-                            <img src="img/icon/speed.png" alt="speed" class="char__img">
+                            <img src="img/icon/speed.png" alt="speed" class="char__img char__img_speed">
+                            <!-- <img src="img/icon/mini_speed.png" alt="speed" class="char__img_mini"> -->
                         </div>
                         <span class="char__up_big">2,7</span>
                         <span class="char__up_mini">сек</span>
@@ -56,7 +57,8 @@
                 <div class="char__item">
                     <div class="char__item_block">
                         <div class="char__img">
-                            <img src="img/icon/stroke.png" alt="stroke" class="char__img">
+                            <img src="img/icon/stroke.png" alt="stroke" class="char__img char__img_stroke">
+                            <!-- <img src="img/icon/mini_stroke.png" alt="stroke" class="char__img_mini"> -->
                         </div>
                         <span class="char__up_big">632</span>
                         <span class="char__up_mini">км</span>
